--- a/src/UpdatePacker/UpdatePacker.csproj
+++ b/src/UpdatePacker/UpdatePacker.csproj
@@ -5,7 +5,7 @@
 	<PropertyGroup>
 		<ProjectGuid>{C636A1C0-50BF-4224-AAD4-F2283C8F4558}</ProjectGuid>
 		<SDKDir>$(SolutionDir)resources\spaceport-sdk\</SDKDir>
-		<LaunchpadPath>$(SolutionDir)src\Merger\bin\x86\Debug\LaunchpadMerged.dll</LaunchpadPath>
+		<LaunchpadPath>$(SolutionDir)src\PluginMerger\bin\x86\Debug\LaunchpadMerged.dll</LaunchpadPath>
 		<OutputDir>bin\x86\Debug\</OutputDir>
   </PropertyGroup>
 	
@@ -36,6 +36,8 @@
   </Target>
 	
 	<Target Name="Clean">
+		<RemoveDir Directories="bin" />
+		<RemoveDir Directories="obj" />
 		<RemoveDir Directories="$(OutputDir)\update" />
 	</Target>
   
