Changed to use spaceport-sdk in tools
Removed all code to get spaceport install directory, and moved path to a
class with statics that refer to the tools/spaceport-sdk path.

--- a/src/Launchpad/Launchpad.csproj
+++ b/src/Launchpad/Launchpad.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Helpers\Check.cs" />
     <Compile Include="Helpers\SPHelper.cs" />
     <Compile Include="Helpers\TargetHelper.cs" />
+    <Compile Include="LaunchpadPaths.cs" />
     <Compile Include="Observable\IObservable.cs" />
     <Compile Include="Observable\IObserver.cs" />
     <Compile Include="Observable\Unsubscriber.cs" />
