Major refactor to entire Plugin
- Reads and parses errors from sp push and sp build
- Renamed SPDeviceWatcher to DeviceWatcher
- Moved Updater.EnumerableHelper delegates to global scope
- Rewrote SPWrapper completely. Getting device names is now push instead of polling
- DeviceWatcher now uses pushes using sp push --list instead of polling periodically
- Hooked up build event to sp build

--- a/src/Launchpad/Launchpad.csproj
+++ b/src/Launchpad/Launchpad.csproj
@@ -48,17 +48,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeployListener.cs" />
+    <Compile Include="DiscoveryStatus.cs" />
     <Compile Include="EventRouter.cs" />
     <Compile Include="Helpers\Check.cs" />
     <Compile Include="Helpers\SPHelper.cs" />
     <Compile Include="Helpers\TargetHelper.cs" />
+    <Compile Include="Helpers\TraceHelper.cs" />
     <Compile Include="LaunchpadPaths.cs" />
     <Compile Include="Observable\IObservable.cs" />
     <Compile Include="Observable\IObserver.cs" />
     <Compile Include="Observable\Unsubscriber.cs" />
     <Compile Include="SPPluginEvents.cs" />
     <Compile Include="SPWrapper.cs" />
-    <Compile Include="SPDeviceWatcher.cs" />
+    <Compile Include="DeviceWatcher.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Forms\frmTargets.cs">
       <SubType>Form</SubType>
