Added a hook into the project menu
The only thing I added so far is the Spaceport app properties

--- a/src/Launchpad/Launchpad.csproj
+++ b/src/Launchpad/Launchpad.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Observable\IObservable.cs" />
     <Compile Include="Observable\IObserver.cs" />
     <Compile Include="Observable\Unsubscriber.cs" />
+    <Compile Include="ProjectMenuController.cs" />
+    <Compile Include="ProjectMenu.cs" />
     <Compile Include="SPPluginEvents.cs" />
     <Compile Include="SPWrapper.cs" />
     <Compile Include="DeviceWatcher.cs" />
