--- a/src/Launchpad/Launchpad.csproj
+++ b/src/Launchpad/Launchpad.csproj
@@ -53,6 +53,18 @@
     <Compile Include="DeployListener.cs" />
     <Compile Include="DiscoveryStatus.cs" />
     <Compile Include="EventRouter.cs" />
+    <Compile Include="Forms\FileSelector.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\FileSelector.Designer.cs">
+      <DependentUpon>FileSelector.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmProject.Designer.cs">
+      <DependentUpon>frmProject.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\Check.cs" />
     <Compile Include="Helpers\SpaceportHelper.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
@@ -100,6 +112,12 @@
     <Compile Include="Target.cs" />
     <Compile Include="TargetEventArgs.cs" />
     <Compile Include="UpdaterHook.cs" />
+    <EmbeddedResource Include="Forms\FileSelector.resx">
+      <DependentUpon>FileSelector.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmProject.resx">
+      <DependentUpon>frmProject.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmTargets.resx">
       <DependentUpon>frmTargets.cs</DependentUpon>
     </EmbeddedResource>
