--- a/src/UpdatePacker/UpdatePacker.csproj
+++ b/src/UpdatePacker/UpdatePacker.csproj
@@ -6,6 +6,7 @@
 		<ProjectGuid>{C636A1C0-50BF-4224-AAD4-F2283C8F4558}</ProjectGuid>
 		<SDKDir>..\..\resources\spaceport-sdk\</SDKDir>
 		<LaunchpadPath>..\PluginMerger\bin\x86\Debug\LaunchpadMerged.dll</LaunchpadPath>
+		<UpdaterPath>..\PluginMerger\bin\x86\Debug\UpdaterMerged.exe</UpdaterPath>
 		<OutputDir>bin\x86\Debug\</OutputDir>
   </PropertyGroup>
 	
@@ -23,6 +24,7 @@
 		
 		<Copy SourceFiles="@(SDKFiles)" DestinationFiles="@(SDKFiles->'$(OutputDir)\update\Tools\spaceport-sdk\%(RecursiveDir)%(Filename)%(Extension)')"/>
 		<Copy SourceFiles="$(LaunchpadPath)" DestinationFiles="$(OutputDir)\update\Plugins\Launchpad.dll" />
+		<Copy SourceFiles="$(UpdaterPath)" DestinationFiles="$(OutputDir)\update\Data\Launchpad\updater.exe" />
 		
 		<ItemGroup>
 			<UpdateFiles Include="$(OutputDir)update\**\*.*" />
