--- a/src/PluginMerger/PluginMerger.csproj
+++ b/src/PluginMerger/PluginMerger.csproj
@@ -22,17 +22,6 @@
 		<CallTarget Targets="MergeLaunchpad"/>
 		<CallTarget Targets="MergeUpdater"/>
   </Target>
-
-	<Target Name="MergeUpdater">
-		<ItemGroup>
-      <MergeAsm Include="$(UpdaterDir)Updater.exe" />
-      <MergeAsm Include="$(UpdaterDir)UpdaterCore.dll" />
-      <MergeAsm Include="$(UpdaterDir)Ionic.Zip.dll" />
-      <MergeAsm Include="$(UpdaterDir)log4net.dll" />
-    </ItemGroup>
-    <Message Text="Merging assemblies into $(UpdaterOutput)" />
-    <ILMerge InputAssemblies="@(MergeAsm)" OutputFile="..\$(DestDir)$(UpdaterOutput)" AllowDup="true" TargetKind="Exe"/>
-	</Target>
 	
 	<Target Name="MergeLaunchpad">
 		<ItemGroup>
@@ -45,6 +34,17 @@
     </ItemGroup>
     <Message Text="Merging assemblies into $(LaunchpadOutput)" />
     <ILMerge InputAssemblies="@(MergeAsm)" OutputFile="..\$(DestDir)$(LaunchpadOutput)" TargetKind="Dll" AllowDup="false"/>
+	</Target>
+	
+	<Target Name="MergeUpdater">
+		<ItemGroup>
+      <MergeUpd Include="$(UpdaterDir)Updater.exe" />
+      <MergeUpd Include="$(UpdaterDir)UpdaterCore.dll" />
+      <MergeUpd Include="$(UpdaterDir)Ionic.Zip.dll" />
+			<MergeUpd Include="$(UpdaterDir)log4net.dll" />
+    </ItemGroup>
+    <Message Text="Merging assemblies into $(UpdaterOutput)" />
+    <ILMerge InputAssemblies="@(MergeUpd)" OutputFile="..\$(DestDir)$(UpdaterOutput)" AllowDup="true" TargetKind="WinExe"/>
 	</Target>
   
 	<Target Name="Clean">
