Killed SwfOp references
I have no idea why this was referenced. It doesn't seem to do anything

--- a/src/PluginMerger/PluginMerger.csproj
+++ b/src/PluginMerger/PluginMerger.csproj
@@ -27,9 +27,7 @@
 		<ItemGroup>
       <MergeAsm Include="$(LaunchpadDir)Launchpad.dll" />
       <MergeAsm Include="$(LaunchpadDir)UpdaterCore.dll" />
-      <MergeAsm Include="$(LaunchpadDir)PluginCore.dll" />
-      <MergeAsm Include="$(LaunchpadDir)SwfOp.dll" />
-      <MergeAsm Include="$(LaunchpadDir)ProjectManager.dll" />
+      <MergeAsm Include="$(LaunchpadDir)Ionic.Zip.dll" />
       <MergeAsm Include="$(LaunchpadDir)log4net.dll" />
     </ItemGroup>
     <Message Text="Merging assemblies into $(LaunchpadOutput)" />
