Moved updater logging hooks to a new class
- Changed the names of some functions in UpdateRunner
- Removed changing UI when update found

--- a/src/Launchpad/Launchpad.csproj
+++ b/src/Launchpad/Launchpad.csproj
@@ -119,6 +119,7 @@
     <Compile Include="TargetEventArgs.cs" />
     <Compile Include="Tuple.cs" />
     <Compile Include="UpdaterHook.cs" />
+    <Compile Include="UpdaterHookController.cs" />
     <EmbeddedResource Include="Forms\FileSelector.resx">
       <DependentUpon>FileSelector.cs</DependentUpon>
     </EmbeddedResource>
