--- a/src/PluginMerger/PluginMerger.csproj
+++ b/src/PluginMerger/PluginMerger.csproj
@@ -28,6 +28,7 @@
       <MergeAsm Include="$(LaunchpadDir)Launchpad.dll" />
       <MergeAsm Include="$(LaunchpadDir)UpdaterCore.dll" />
       <MergeAsm Include="$(LaunchpadDir)Ionic.Zip.dll" />
+      <MergeAsm Include="$(LaunchpadDir)GaDotNet.Common.dll" />
       <MergeAsm Include="$(LaunchpadDir)log4net.dll" />
     </ItemGroup>
     <Message Text="Merging assemblies into $(LaunchpadOutput)" />
