--- a/src/UpdaterCore/UpdaterCore.csproj
+++ b/src/UpdaterCore/UpdaterCore.csproj
@@ -82,11 +82,14 @@
     <Compile Include="Rollback\RevertableExceptionAction.cs" />
     <Compile Include="Rollback\RevertableFileCopy.cs" />
     <Compile Include="Rollback\RevertableTransaction.cs" />
+    <Compile Include="StringHelper.cs" />
     <Compile Include="Update\UpdateCheckerEventArgs.cs" />
     <Compile Include="Update\UpdateDownloader.cs" />
     <Compile Include="Update\UpdateHelper.cs" />
     <Compile Include="Update\UpdateInformation.cs" />
-    <Compile Include="Update\UpdateRunner.cs" />
+    <Compile Include="Update\UpdateManifest.cs" />
+    <Compile Include="Update\UpdateChecker.cs" />
+    <Compile Include="UriHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
